<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".elements.Intro1"
    android:background="@color/colorAccent">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="80sp">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="@dimen/size24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/size48"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size24"
            android:text="@string/desc_intro1"
            android:textAlignment="center"/>
    </LinearLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:justifyContent="flex_end"
        app:alignItems="center"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/btnnext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/size16"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size16"
            android:clickable="true"/>

    </com.google.android.flexbox.FlexboxLayout>

</FrameLayout>